# scrit

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean  clean.sh  compile_commands.json  data  features.md  format.sh  install.sh  install_libscrit.sh  raytest.scrit  t.scrit  test.wire  testop.scrit  tests.scrit  todo.scrit
docs/: debug.md  features.md  install.md  modules.md  note.md  standard.md
examples/: class.scrit  colors.scrit  decls.scrit  impl.scrit  info.md  iterate-object.scrit  mandelbrot.scrit  mandelbrot_lib.scrit  mandelbrot_raylib.scrit  mandelbrot_term.scrit  match.scrit  refresh.scrit  static.scrit  struct.scrit
include/: ast.hpp  ast_serializer.hpp  ast_visitor.hpp  context.hpp  ctx.hpp  debug.hpp  error.hpp  lexer.hpp  native.hpp  parser.hpp  result.hpp  scritmod.hpp  serializer.hpp  type.hpp  value.hpp
modules/: build.sh  module_tool.scrit
modules/array/: array.cpp  build.sh  std::array.cpp
modules/math/: build.sh  math.cpp
modules/raylib/: Makefile  build.sh  helpers.hpp  input.hpp  raylib.cpp  raylib.hpp
modules/raylib/test/: main.scrit  raytest.scrit
modules/sstream/: build.sh  sstream.cpp
modules/string/: build.sh  std::string.cpp  string.cpp
modules/system/: build.sh  functions.md  system.cpp
src/: ast.cpp  ast_serializer.cpp  context.cpp  ctx.cpp  debug.cpp  error.cpp  expression.cpp  int.cpp  lexer.cpp  main.cpp  naitive.cpp  native.cpp  object.cpp  parser.cpp  raylib.cpp  serializer.cpp  std-query.cpp  std.cpp  type.cpp  value.cpp
test/: lexer.cpp  lexer_test.cpp  main.cpp  test_execution.cpp  test_main.cpp  value.cpp  value_test.cpp
tools/: module_tool.scrit
